// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package translation.v1;

import "google/protobuf/struct.proto";
import "objects/v3/record.proto";

// TranslationService provides methods to generate artifacts from OASF objects.
service TranslationService {
  // RecordToVSCodeCopilot generates a VSCodeCopilot config from a Record.
  rpc RecordToVSCodeCopilot(RecordToVSCodeCopilotRequest) returns (RecordToVSCodeCopilotResponse);

  // RecordToA2A generates an A2A card from a Record.
  rpc RecordToA2A(RecordToA2ARequest) returns (RecordToA2AResponse);
}

message RecordToVSCodeCopilotRequest {
  // The Record object to be converted into a VSCodeCopilot config.
  objects.v3.Record record = 2;
}

message RecordToVSCodeCopilotResponse {
  // The generated VSCodeCopilot config in a structured format.
  google.protobuf.Struct data = 1;
}

message RecordToA2ARequest {
  // The Record object to be converted into an A2A card.
  objects.v3.Record record = 1;
}

message RecordToA2AResponse {
  // The generated A2A card data in a structured format.
  google.protobuf.Struct data = 1;
}
